# regex-c

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gentests.py
docs/: mainpage.md
include/: template.h
include/re/: re.h
include/regex/: errors.h  regex.h
include/str/: fmt.h  str.h
include/strlx/: fmt.h  strlx.h
re/: re.c
regex/: dsa.c  dsa.h  gentokens.py  mem.h  parser.c  parser.h  tokens.h
str/: common.c  fmt.c  str.c  strbuf.c
strlx/: common.c  fmt.c  str.c  strbuf.c
tests/: gentests.py  str.tdata  test-regex.c  test-str.c
tests/str/: str.h.tdata
